[tool.poetry]
name = "dev-step-library"
version = "0.0.2"
description = "Reusable test step library for developer tooling"
authors = ["Chino Franco <chino.franco@gmail.com>"]
readme = "README.md"
packages = [
    { include = "dev_step_library" }
]
homepage = "https://github.com/jgfranco17/dev-step-library"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: Behave",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.10"
behave = "^1.2.6"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
coverage = "^7.6.8"
black = "^24.10.0"
flake8 = "^7.1.1"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
